9-4-2009: Added getter/setter for domain
9-4-2009: Update to Java 1.5
9-2-2009: Right-Justified chart close buttons (instead of centering, which caused them to go partly offscreen)
9-2-2009: Update to Java 1.5
Changed default window sizes to 4, based on Kathy's 8-26-2009 email